[package]
name = "cozy-ui"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = { git = "https://github.com/mazznoer/colorgrad-rs.git" }
egui = "0.27"
egui_extras = { version = "0.27", features = ["svg", "image"] }
once_cell = { version = "1.19", features = ["parking_lot"] }

[dev-dependencies]
eframe = "0.27"
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "45465c5f46abed6c6ce370fffde5edc8e4cd5aa3" }
libsw = "3.3.1"

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui.git", rev = "814ad0783cf8b826a258e29ed4c50ae6daa2e890" }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "814ad0783cf8b826a258e29ed4c50ae6daa2e890" }

[patch."https://github.com/BillyDM/egui-baseview"]
egui-baseview = {git = "https://github.com/murl-digital/egui-baseview", rev = "275cb4c3ed86d98ea557259383d71d2847b8babf"}
