[package]
name = "cozy-ui"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = { git = "https://github.com/mazznoer/colorgrad-rs.git" }
egui = "0.28"
egui_extras = { version = "0.28", features = ["svg", "image"] }
once_cell = { version = "1.19", features = ["parking_lot"] }

[dev-dependencies]
eframe = "0.28"
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview", rev = "9867bbf124dc5059931a4be6e101c115410328c1" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "45465c5f46abed6c6ce370fffde5edc8e4cd5aa3" }
libsw = "3.3.1"
