[package]
name = "cozy-ui"
description = "various ui components for cozy dsp plugins"
repository = "https://vcs.cozydsp.space/cozy-dsp/cozy-ui"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = "0.7"
egui = "0.28"
egui_extras = { version = "0.28", features = ["svg", "image"] }
once_cell = { version = "1.19", features = ["parking_lot"] }

[dev-dependencies]
eframe = "0.28"
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview", rev = "9867bbf124dc5059931a4be6e101c115410328c1" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "45465c5f46abed6c6ce370fffde5edc8e4cd5aa3" }
libsw = "3"
